迁移主屏与独立客户端界面 / port builder and standalone screens