@@ -1,93 +1,33 @@
 package com.rtsbuilding.rtsbuilding.client.screen.standalone;
 
 
-import com.mojang.blaze3d.platform.InputConstants;
-import com.rtsbuilding.rtsbuilding.Config;
 import com.rtsbuilding.rtsbuilding.client.bootstrap.ClientKeyMappings;
-import com.rtsbuilding.rtsbuilding.client.controller.ClientRtsController;
-import com.rtsbuilding.rtsbuilding.client.network.RtsClientPacketGateway;
 import com.rtsbuilding.rtsbuilding.client.pathfinding.RtsClientPathfinding;
-import com.rtsbuilding.rtsbuilding.client.record.CraftableEntry;
-import com.rtsbuilding.rtsbuilding.client.rendering.builder.BuildGhostBlockStateResolver;
-import com.rtsbuilding.rtsbuilding.client.rendering.util.RtsPlacementRayFreeze;
 import com.rtsbuilding.rtsbuilding.client.rendering.util.RenderingUtil;
 import com.rtsbuilding.rtsbuilding.client.screen.blueprint.*;
-import com.rtsbuilding.rtsbuilding.client.screen.craft.RtsCraftQuantityWindowPanel;
-import com.rtsbuilding.rtsbuilding.client.screen.culling.RtsCullingClientState;
-import com.rtsbuilding.rtsbuilding.client.screen.culling.RtsCullingManager;
-import com.rtsbuilding.rtsbuilding.client.screen.culling.RtsCullingPanel;
-import com.rtsbuilding.rtsbuilding.client.screen.culling.RtsCullingWorldInput;
-import com.rtsbuilding.rtsbuilding.client.screen.funnel.FunnelBufferPanel;
-import com.rtsbuilding.rtsbuilding.client.screen.gear.GearMenuPanel;
-import com.rtsbuilding.rtsbuilding.client.screen.guide.GuidePanel;
-import com.rtsbuilding.rtsbuilding.client.screen.guide.RtsAiChatPanel;
-import com.rtsbuilding.rtsbuilding.uicore.guide.GuideUiContext;
-import com.rtsbuilding.rtsbuilding.client.screen.handler.RtsUiScaleFrame;
-import com.rtsbuilding.rtsbuilding.client.screen.handler.ScreenCursorPicker;
 import com.rtsbuilding.rtsbuilding.client.screen.handler.ScreenShapeController;
-import com.rtsbuilding.rtsbuilding.client.screen.handler.StorageLinkDetailHandler;
-import com.rtsbuilding.rtsbuilding.client.screen.input.CameraInputHandler;
 import com.rtsbuilding.rtsbuilding.client.screen.interaction.InteractionTypes;
 import com.rtsbuilding.rtsbuilding.client.screen.layout.BottomPanelLayoutTypes;
-import com.rtsbuilding.rtsbuilding.client.screen.mode.BuilderModeWheel;
-import com.rtsbuilding.rtsbuilding.client.screen.mode.PlacedBlockRotationGesture;
 import com.rtsbuilding.rtsbuilding.client.screen.mode.PlacedBlockRotationHandles;
-import com.rtsbuilding.rtsbuilding.client.screen.mode.PlacementStateWheel;
-import com.rtsbuilding.rtsbuilding.client.screen.overlay.LeftDockedTooltipRenderer;
-import com.rtsbuilding.rtsbuilding.client.screen.overlay.PlayerStatusRenderer;
-import com.rtsbuilding.rtsbuilding.client.screen.overlay.RtsScreenOverlayRenderer;
-import com.rtsbuilding.rtsbuilding.client.screen.panel.BottomPanel;
-import com.rtsbuilding.rtsbuilding.client.screen.panel.RtsFloatingWindowLayer;
 import com.rtsbuilding.rtsbuilding.client.screen.quickbuild.BuildShape;
-import com.rtsbuilding.rtsbuilding.client.screen.quickbuild.QuickBuildMode;
-import com.rtsbuilding.rtsbuilding.client.screen.quickbuild.QuickBuildPanel;
-import com.rtsbuilding.rtsbuilding.client.screen.selection.RtsSelectionNudge;
-import com.rtsbuilding.rtsbuilding.client.screen.shape.ShapeDataRecords;
-import com.rtsbuilding.rtsbuilding.client.screen.shape.ShapeGeometryUtil;
-import com.rtsbuilding.rtsbuilding.client.screen.storage.LinkedStoragePanel;
-import com.rtsbuilding.rtsbuilding.client.screen.topbar.TopBarPanel;
-import com.rtsbuilding.rtsbuilding.client.screen.topbar.TopBarTypes;
-import com.rtsbuilding.rtsbuilding.client.screen.workflow.RtsBlueprintResumePanel;
-import com.rtsbuilding.rtsbuilding.client.screen.workflow.RtsResumePlacementPanel;
-import com.rtsbuilding.rtsbuilding.client.screen.workflow.RtsWorkflowPanel;
-import com.rtsbuilding.rtsbuilding.client.service.MiningOperationService;
-import com.rtsbuilding.rtsbuilding.client.state.RtsScreenUiStateManager;
 import com.rtsbuilding.rtsbuilding.client.util.RtsClientUiUtil;
-import com.rtsbuilding.rtsbuilding.client.widget.WindowTextBox;
 import com.rtsbuilding.rtsbuilding.common.RtsUltimineCollector;
 import com.rtsbuilding.rtsbuilding.common.build.BuilderMode;
-import com.rtsbuilding.rtsbuilding.common.persist.RtsClientUiStateStore;
 import com.rtsbuilding.rtsbuilding.common.shape.model.ShapeFillMode;
-import com.rtsbuilding.rtsbuilding.compat.ae2.RtsAe2IconResolver;
-import com.rtsbuilding.rtsbuilding.server.plugin.BuiltInRtsPluginCatalog;
-import com.rtsbuilding.rtsbuilding.uikit.theme.BottomPanelCraftDockStyle;
-import com.rtsbuilding.rtsbuilding.uikit.theme.BottomPanelCraftStyle;
-import com.rtsbuilding.rtsbuilding.uikit.theme.RtsMainlineTheme;
-import com.rtsbuilding.rtsbuilding.uikit.theme.TooltipStyle;
-import com.rtsbuilding.rtsbuilding.client.screen.canvas.MinecraftUiCanvas;
-import com.rtsbuilding.rtsbuilding.uicore.geometry.UiRect;
-import com.rtsbuilding.rtsbuilding.uikit.canvas.UiChromeRenderer;
-import net.minecraft.client.gui.Font;
-import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.client.gui.components.EditBox;
-import net.minecraft.client.gui.screens.Screen;
-import net.minecraft.core.BlockPos;
-import net.minecraft.core.Direction;
-import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.network.chat.Component;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.util.Mth;
-import net.minecraft.world.item.BlockItem;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.Items;
-import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.world.phys.BlockHitResult;
-import net.minecraft.world.phys.HitResult;
-import net.minecraft.world.phys.Vec3;
-import net.neoforged.fml.ModList;
-import org.lwjgl.glfw.GLFW;
+import com.rtsbuilding.rtsbuilding.client.input.overlay.LegacyGuiGraphics;
+import net.minecraft.client.gui.GuiScreen;
+import net.minecraft.item.ItemStack;
+import net.minecraft.block.state.IBlockState;
+import net.minecraft.util.EnumFacing;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.RayTraceResult;
+import net.minecraft.util.math.Vec3d;
+import org.lwjgl.input.Keyboard;
 
 import java.util.List;
+import java.util.Collections;
+import net.minecraft.client.resources.I18n;
+import net.minecraft.block.material.Material;
 
 import static com.rtsbuilding.rtsbuilding.client.screen.standalone.BuilderScreenConstants.*;
 
@@ -126,33 +66,33 @@ final class BuilderScreenPreviewQueryOwner {
         }
 
     List<BlockPos> collectUltiminePreviewBlocks() {
-            if (screen.getMinecraft() == null || screen.getMinecraft().level == null) {
-                return List.of();
+            if (screen.getMinecraft() == null || screen.getMinecraft().world == null) {
+                return Collections.emptyList();
             }
             if (!screen.isQuickBuildRangeDestroyChainMode()) {
-                return List.of();
+                return Collections.emptyList();
             }
             BlockPos seed = screen.controller.getMineProgressPos();
-            if (seed == null || screen.getMinecraft().level.getBlockState(seed).isAir()) {
-                BlockHitResult hit = screen.cursorPicker.pickBlockHit();
+            if (seed == null || screen.getMinecraft().world.isAirBlock(seed)) {
+                RayTraceResult hit = screen.cursorPicker.pickBlockHit();
                 if (hit == null) {
-                    return List.of();
+                    return Collections.emptyList();
                 }
                 seed = hit.getBlockPos();
             }
-            BlockState seedState = screen.getMinecraft().level.getBlockState(seed);
-            if (seedState.isAir()) {
-                return List.of();
+            IBlockState seedState = screen.getMinecraft().world.getBlockState(seed);
+            if (seedState.getMaterial() == Material.AIR) {
+                return Collections.emptyList();
             }
             boolean creative = screen.getMinecraft().player != null && screen.getMinecraft().player.isCreative();
             List<BlockPos> raw = RtsUltimineCollector.collect(
-                    screen.getMinecraft().level,
+                    screen.getMinecraft().world,
                     seed,
                     screen.getUltimineLimit(),
                     (pos, state, originalState) -> {
-                        if (state.isAir()
-                                || !state.getFluidState().isEmpty()
-                                || (!creative && state.getDestroySpeed(screen.getMinecraft().level, pos) < 0.0F)) {
+                        if (state.getMaterial() == Material.AIR
+                                || state.getMaterial().isLiquid()
+                                || (!creative && state.getBlockHardness(screen.getMinecraft().world, pos) < 0.0F)) {
                             return false;
                         }
                         return state.getBlock() == originalState.getBlock();
@@ -169,11 +109,11 @@ final class BuilderScreenPreviewQueryOwner {
         }
 
     boolean isMovePlayerActionMouse(int button) {
-            return ClientKeyMappings.MOVE_PLAYER.isActiveAndMatches(InputConstants.Type.MOUSE.getOrCreate(button));
+            return GuiScreen.isCtrlKeyDown() && ClientKeyMappings.MOVE_PLAYER.getKeyCode() == button - 100;
         }
 
     boolean isMovePlayerActionKey(int keyCode, int scanCode) {
-            return ClientKeyMappings.MOVE_PLAYER.isActiveAndMatches(InputConstants.getKey(keyCode, scanCode));
+            return ClientKeyMappings.MOVE_PLAYER.getKeyCode() == keyCode;
         }
 
     boolean handleMovePlayerActionAt(double mouseX, double mouseY) {
@@ -185,7 +125,7 @@ final class BuilderScreenPreviewQueryOwner {
             boolean isDoubleClick = (now - screen.lastCtrlRightClickTime) < screen.CTRL_DOUBLE_CLICK_THRESHOLD_MS;
             screen.lastCtrlRightClickTime = now;
 
-            BlockHitResult hit = screen.cursorPicker.pickBlockHit();
+            RayTraceResult hit = screen.cursorPicker.pickBlockHit();
             if (hit != null) {
                 if (isDoubleClick) {
                     screen.lastCtrlRightClickTime = 0;
@@ -197,7 +137,7 @@ final class BuilderScreenPreviewQueryOwner {
             return true;
         }
 
-    void enableRtsScissor(GuiGraphics g, int x1, int y1, int x2, int y2) {
+    void enableRtsScissor(LegacyGuiGraphics g, int x1, int y1, int x2, int y2) {
             screen.guiScaleCoordinator.enableScissor(g, x1, y1, x2, y2);
         }
 
@@ -206,7 +146,7 @@ final class BuilderScreenPreviewQueryOwner {
         }
 
     String text(String key, Object... args) {
-            return Component.translatable(key, args).getString();
+            return I18n.format(key, args);
         }
 
     String selectedItemStatusLabel() {
@@ -214,7 +154,7 @@ final class BuilderScreenPreviewQueryOwner {
             String label = screen.controller.getSelectedItemLabel();
             if (preview != null && !preview.isEmpty() && preview.isDamageableItem()) {
                 int max = preview.getMaxDamage();
-                int durability = Math.max(0, max - preview.getDamageValue());
+                int durability = Math.max(0, max - preview.getItemDamage());
                 return label + " " + durability + "/" + max;
             }
             return label;
@@ -233,7 +173,7 @@ final class BuilderScreenPreviewQueryOwner {
             if (screen.getMinecraft() == null || screen.getMinecraft().player == null) {
                 return ItemStack.EMPTY;
             }
-            ItemStack hand = screen.getMinecraft().player.getMainHandItem();
+            ItemStack hand = screen.getMinecraft().player.getHeldItemMainhand();
             return hand.isEmpty() ? ItemStack.EMPTY : hand;
         }
 
@@ -245,27 +185,26 @@ final class BuilderScreenPreviewQueryOwner {
                     && !screen.isMouseOverFloatingWindow(screen.currentMouseX(), screen.currentMouseY());
         }
 
-    Vec3 computeCursorRayDirection() {
+    Vec3d computeCursorRayDirection() {
             return screen.cursorPicker.computeCursorRayDirection();
         }
 
-    Vec3 currentRayOrigin() {
+    Vec3d currentRayOrigin() {
             return screen.cursorPicker.currentRayOrigin();
         }
 
-    Direction currentCameraHorizontalDirection() {
-            if (screen.getMinecraft() != null && screen.getMinecraft().gameRenderer != null) {
-                return Direction.fromYRot(
-                        screen.getMinecraft().gameRenderer.getMainCamera().getYRot());
+    EnumFacing currentCameraHorizontalDirection() {
+            if (screen.getMinecraft() != null && screen.getMinecraft().getRenderViewEntity() != null) {
+                return screen.getMinecraft().getRenderViewEntity().getHorizontalFacing();
             }
-            return Direction.NORTH;
+            return EnumFacing.NORTH;
         }
 
     PlacedBlockRotationHandles getRotationHandles() {
             return screen.rotationHandles;
         }
 
-    BlockHitResult pickBlockHit() {
+    RayTraceResult pickBlockHit() {
             return screen.cursorPicker.pickBlockHit();
         }
 
@@ -298,10 +237,8 @@ final class BuilderScreenPreviewQueryOwner {
         }
 
     boolean isAltDown() {
-            if (screen.getMinecraft() == null) return false;
-            long window = screen.getMinecraft().getWindow().getWindow();
-            return GLFW.glfwGetKey(window, GLFW.GLFW_KEY_LEFT_ALT) == GLFW.GLFW_PRESS
-                    || GLFW.glfwGetKey(window, GLFW.GLFW_KEY_RIGHT_ALT) == GLFW.GLFW_PRESS;
+            return Keyboard.isKeyDown(Keyboard.KEY_LMENU)
+                    || Keyboard.isKeyDown(Keyboard.KEY_RMENU);
         }
 
     double currentMouseX() {
